# crystal-elastic-workbench

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  start_crystal_elastic_workbench.bat
crystal_elastic_workbench/: __init__.py  __main__.py  animation_export.py  cij_matrix_table.py  core.py  dashboard_model.py  elastic_models.py  examples.py  exporting.py  figure_export.py  gui.py  gui_services.py  gui_style.py  paper_export.py  plot_styles.py  render3d.py  render3d_worker.py  sampling.py  stability.py  templates.py  visualization.py
examples/: al_cubic.json  mgo_cubic.json  si_cubic.json
tests/: test_animation_export.py  test_cij_matrix_table.py  test_dashboard_model.py  test_elastic_core.py  test_elastic_models.py  test_figure_export.py  test_gui_import_order.py  test_gui_services.py  test_gui_smoke.py  test_paper_export.py  test_plot_styles.py  test_readme.py  test_render3d.py  test_sampling_export.py  test_templates.py  test_visualization.py
